fixed odd scrolling on mobile login screen

--- a/react-app/src/components/login/Login.css
+++ b/react-app/src/components/login/Login.css
@@ -3,9 +3,10 @@ body::after {
     position: absolute;
     background: #222222;
     clip-path: polygon(0% 70%, 0% 100%, 100% 100%, 100% 30%);
-    height: 100%;
+    height: 100vh;
     width: 100%;
     z-index: 0;
+    overflow: hidden;
 }
 
 body > * {
@@ -45,6 +46,7 @@ body > * {
 
 .login-input-fields {
   display: flex;
+  z-index: 8;
   flex-direction: column;
   align-items: center;
   justify-content: center;
